Added Seperate Difficulties, Handled by new Database Class